--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,15 +30,15 @@ body {
 /* For dark mode */
 @media (prefers-color-scheme: dark) {
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(11, 15, 45, 0.3);
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(21, 26, 71, 0.6);
   }
 
   ::-webkit-scrollbar-track {
-    background: #2e2e2e;
+    background: #dcddde;
   }
 }
 @layer base {
