--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
 /* Theme Configuration */
 @theme {
   /* Color System */
-  --color-primary: #223853;
+  --color-primary: #021d3d;
   
   --color-background: 0 0% 100%;
   --color-foreground: 0 0% 3.9%;
