--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,8 +45,7 @@ body {
 @theme {
   /* Color System */
   --color-primary: #021d3d;
-  
-  --color-background: 0 0% 100%;
+  --color-background: rgba(2, 29, 61, 0.2);
   --color-foreground: 0 0% 3.9%;
   
   --color-card: 0 0% 100%;
@@ -78,7 +77,7 @@ body {
   --color-chart-5: 27 87% 67%;
   
   /* Dark mode colors */
-  --color-background-dark: 0 0% 3.9%;
+  --color-background-dark: rgba(2, 29, 61, 0.2);
   --color-foreground-dark: 0 0% 98%;
   
   --color-card-dark: 0 0% 3.9%;
@@ -189,7 +188,7 @@ body {
 /* Dark mode using media query */
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--color-background-dark);
+    --color-background: var(--color-background);
     --color-foreground: var(--color-foreground-dark);
     --color-card: var(--color-card-dark);
     --color-card-foreground: var(--color-card-foreground-dark);
