--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,8 @@ body {
   --color-chart-3: 197 37% 24%;
   --color-chart-4: 43 74% 66%;
   --color-chart-5: 27 87% 67%;
+
+  --color-gray-100:#F3F6F9;
   
   /* Dark mode colors */
   --color-background-dark: rgba(2, 29, 61, 0.2);
