changes for test new UI for dashboard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,12 @@
 @import 'tailwindcss';
 
 /* Base font family */
-body {
+/* body {
   font-family: 'Inter', sans-serif;
-}
+} */
+
+:root { font-family: var(--font-greycliff), system-ui, sans-serif; }
+
 
 /* Custom scrollbar styles */
 ::-webkit-scrollbar {
