--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ body.modal-open {
 @theme {
   /* Color System */
   --color-primary: #021d3d;
-  --color-primary-blue:#3956E8;
+  --color-primary-blue:#3b5af1;
   --color-background: rgba(2, 29, 61, 0.2);
   --color-foreground: 0 0% 3.9%;
   
